<resources>

    <string name="app_name">Multiple_Language</string>

    <string name="mul_lan">Multiple Language</string>
    <string name="welcome">Welcome</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="signup">Signup</string>
    <string name="changeLan">Change Language</string>
    <string name="homepage">Home Page</string>


</resources>
