<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#454545"
    tools:context=".MainActivity">


    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="24dp"
        android:text="@string/mul_lan"
        android:textColor="#ffff"
        android:textSize="30dp"/>

    <EditText
        android:id="@+id/editText"
        android:layout_width="200dp"
        android:layout_height="30dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="136dp"
        android:background="@drawable/edittext_round"
        android:ems="10"
        android:hint="@string/username"
        android:inputType="textPersonName"
        android:textSize="20dp" />

    <EditText
        android:id="@+id/editText2"
        android:layout_width="200dp"
        android:layout_height="30dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="197dp"
        android:background="@drawable/edittext_round"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPersonName"
        android:textSize="20dp" />

    <Button
        android:id="@+id/button"
        android:layout_width="150dp"
        android:layout_height="30dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="200dp"
        android:textColor="#ffffff"
        android:textSize="20sp"
        android:background="@drawable/button_round"
        android:text="@string/login" />

    <Button
        android:id="@+id/button2"
        android:layout_width="220dp"
        android:layout_height="30dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="113dp"
        android:textSize="15sp"
        android:background="@drawable/button_round"
        android:drawableLeft="@drawable/ic_action_lang"
        android:text="@string/changeLan"
        android:textColor="#ffffff" />
    />
</RelativeLayout>